<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.android.quizapp.MainActivity">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="16dp"
            android:text="@string/topic_quiz"
            android:textAllCaps="true"
            android:textSize="15sp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:textAlignment="center"
            />
        <ImageView
            android:layout_width="356dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="fitStart"
            android:src="@drawable/globe_image"
            android:layout_weight="12.02"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/single_choice_heading"
            style="@style/questTypeHeading"/>
        <TextView
            android:id="@+id/quest_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quest_1"
            />
        <RadioGroup
            android:id="@+id/quest_1_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <RadioButton
                android:id="@+id/opt1_quest1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/opt1_quest1"/>
            <RadioButton
                android:id="@+id/opt2_quest1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/opt2_quest1"/>
            <RadioButton
                android:id="@+id/opt3_quest1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/opt3_quest1"/>
            <RadioButton
                android:id="@+id/opt4_quest1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/opt4_quest1"/>
        </RadioGroup>
        <TextView
            android:id="@+id/quest_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quest_4"/>
        <RadioGroup
            android:id="@+id/quest_4_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <RadioButton
                android:id="@+id/opt1_quest4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/opt1_quest4"/>
            <RadioButton
                android:id="@+id/opt2_quest4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/opt2_quest4"/>
            <RadioButton
                android:id="@+id/opt3_quest4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/opt3_quest4"/>
            <RadioButton
                android:id="@+id/opt4_quest4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/opt4_quest4"/>
        </RadioGroup>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/questTypeHeading"
            android:text="@string/multiple_choice_heading"/>
        <TextView
            android:id="@+id/quest_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quest_5"/>
        <CheckBox
            android:id="@+id/opt1_quest5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/opt1_quest5"
            />
        <CheckBox
            android:id="@+id/opt2_quest5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/opt2_quest5"
            />
        <CheckBox
            android:id="@+id/opt3_quest5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/opt3_quest5"
            />
        <CheckBox
            android:id="@+id/opt4_quest5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/opt4_quest5"
            />
        <TextView
            android:id="@+id/quest_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quest_2"/>
        <CheckBox
            android:id="@+id/opt1_quest2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/opt1_quest2"
            />
        <CheckBox
            android:id="@+id/opt2_quest2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/opt2_quest2"
            />
        <CheckBox
            android:id="@+id/opt3_quest2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/opt3_quest2"
            />
        <CheckBox
            android:id="@+id/opt4_quest2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/opt4_quest2"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/questTypeHeading"
            android:text="@string/text_entry_heading"/>
        <TextView
            android:id="@+id/ques_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quest_3"/>
        <EditText
            android:id="@+id/ans_quest3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint_ans_quest3"
            android:textSize="14sp"
            android:inputType="textCapWords"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/questTypeHeading"
            android:text="@string/score_heading"
            android:inputType="textNoSuggestions"
            android:textAllCaps="true"
            />
        <TextView
            android:id="@+id/display_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"/>
        <Button
            android:id="@+id/submit_answers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="submitAnswers"
            android:layout_marginTop="20dp"
            android:text="@string/submit_answer"/>
    </LinearLayout>
</ScrollView>